--- a/simple-todo-app/package.json
+++ b/simple-todo-app/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@babel/runtime": "^7.20.7",
     "meteor-node-stubs": "^1.2.5",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -19,5 +20,8 @@
       "server": "server/main.js"
     },
     "testModule": "tests/main.js"
+  },
+  "devDependencies": {
+    "@types/react": "^19.0.12"
   }
 }
