--- a/package.json
+++ b/package.json
@@ -1,9 +1,34 @@
 {
-  "type": "module",
+  "name": "meteor-app",
+  "private": true,
+  "scripts": {
+    "start": "meteor run",
+    "test": "meteor test --once --driver-package meteortesting:mocha",
+    "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
+    "visualize": "meteor --production --extra-packages bundle-visualizer"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.20.7",
+    "meteor-node-stubs": "^1.2.5",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "meteor": {
+    "mainModule": {
+      "client": "client/main.jsx",
+      "server": "server/main.js"
+    },
+    "testModule": "tests/main.js"
+  },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
+    "@types/meteor": "^2.9.8",
+    "@types/prop-types": "^15.7.14",
+    "@types/react": "^19.0.12",
     "eslint": "^9.23.0",
     "eslint-plugin-react": "^7.37.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.28.0"
   }
