--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.20.7",
+    "@tailwindcss/postcss": "^4.0.17",
     "meteor-node-stubs": "^1.2.5",
+    "postcss": "^8.5.3",
+    "postcss-load-config": "^6.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^4.0.17"
   },
   "meteor": {
     "mainModule": {
-      "client": "client/main.jsx",
+      "client": "client/main.tsx",
       "server": "server/main.ts"
     },
     "testModule": "tests/main.js"
@@ -26,6 +30,7 @@
     "@types/meteor": "^2.9.8",
     "@types/prop-types": "^15.7.14",
     "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
     "eslint": "^9.23.0",
     "eslint-plugin-react": "^7.37.4",
     "typescript": "^5.8.2",
