update package json to include type: module

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "meteor-app",
   "private": true,
+  "type": "module",
   "scripts": {
     "start": "meteor run",
     "test": "meteor test --once --driver-package meteortesting:mocha",
