--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@eslint/js": "^9.23.0",
     "@types/meteor": "^2.9.8",
+    "@types/mocha": "^10.0.10",
     "@types/prop-types": "^15.7.14",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
