fix: patch for react router fix not running after npm i

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "meteor-app",
   "private": true,
-  "postinstall": "patch-package",
   "scripts": {
     "start": "meteor run",
     "test": "meteor test --once --driver-package meteortesting:mocha",
     "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
-    "visualize": "meteor --production --extra-packages bundle-visualizer"
+    "visualize": "meteor --production --extra-packages bundle-visualizer",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@babel/runtime": "^7.20.7",
