--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,15 +2,15 @@ on:
   push:
     branches:
       - shen-spike
+  workflow_dispatch:
+
 jobs:
   galaxy-deployment:
     runs-on: ubuntu-latest
     name: Deployment to Galaxy
     steps:
-      - name: Ls test
-        run: ls
       - name: Install meteor
         run: npx meteor
       - name: Deploy
-        working-directory: ./
+        working-directory: ./client
         run: PATH=/home/runner/.meteor:$PATH METEOR_SESSION_FILE=token.json meteor deploy testdeployment123.meteorapp.com --free --mongo
