--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,4 @@
 on:
-  push:
-    branches:
-      - shen-spike
   workflow_dispatch:
 
 jobs:
@@ -18,5 +15,5 @@ jobs:
           GALAXY_PASSWORD: ${{ secrets.GALAXY_PASSWORD }}
         run: |
           export PATH=/home/runner/.meteor:$PATH
-          printf "$GALAXY_USERNAME\n$GALAXY_PASSWORD" | meteor login
+          printf "$GALAXY_USERNAME\n$GALAXY_PASSWORD\n" | meteor login
           meteor deploy testdeployment1239.meteorapp.com --free --mongo
