--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,13 +16,14 @@ jobs:
           eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
           brew install expect
 
+      - name: Add executable permission to galaxy-login.sh
+        run: chmod +x ./scripts/galaxy-login.sh
+
       - name: Galaxy login
         env:
           GALAXY_USERNAME: ${{ secrets.GALAXY_USERNAME }}
           GALAXY_PASSWORD: ${{ secrets.GALAXY_PASSWORD }}
-        run: |
-          chmod +x ./scripts/galaxy-login.sh
-          ./scripts/galaxy-login.sh
+        run: ./scripts/galaxy-login.sh
 
       - name: Deploy
         run: |
