--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,13 +17,16 @@ jobs:
           brew install expect
 
       - name: Add executable permission to galaxy-login.sh
-        run: chmod +x ./scripts/galaxy-login.sh
+        run: 
 
       - name: Galaxy login
+        working-directory: ./scripts
         env:
           GALAXY_USERNAME: ${{ secrets.GALAXY_USERNAME }}
           GALAXY_PASSWORD: ${{ secrets.GALAXY_PASSWORD }}
-        run: ./scripts/galaxy-login.sh
+        run: |
+          chmod +x ./galaxy-login.sh
+          ./scripts/galaxy-login.sh
 
       - name: Deploy
         run: |
