--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
           GALAXY_PASSWORD: ${{ secrets.GALAXY_PASSWORD }}
         run: |
           chmod +x ./galaxy-login.sh
-          ./scripts/galaxy-login.sh
+          ./galaxy-login.sh
 
       - name: Deploy
         run: |
