--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,12 +17,13 @@ jobs:
           brew install expect
 
       - name: Galaxy login
+        working-directory: ./scripts
         env:
           GALAXY_USERNAME: ${{ secrets.GALAXY_USERNAME }}
           GALAXY_PASSWORD: ${{ secrets.GALAXY_PASSWORD }}
         run: |
-          chmod +x scripts/galaxy-login.sh
-          scripts/galaxy-login.sh
+          chmod +x ./galaxy-login.sh
+          ./galaxy-login.sh
 
       - name: Deploy
         run: |
