--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install meteor
-        run: npx meteor
+        run: |
+          npx meteor
+          export PATH="/home/runner/.meteor:$PATH"
 
       - name: Install expect
         run: |
@@ -22,11 +24,8 @@ jobs:
           GALAXY_USERNAME: ${{ secrets.GALAXY_USERNAME }}
           GALAXY_PASSWORD: ${{ secrets.GALAXY_PASSWORD }}
         run: |
-          export PATH="/home/runner/.meteor:$PATH"
           chmod +x ./galaxy-login.sh
           ./galaxy-login.sh
 
       - name: Deploy
-        run: |
-          export PATH="/home/runner/.meteor:$PATH"
-          meteor deploy testdeployment1239.meteorapp.com --free --mongo
+        run: meteor deploy testdeployment1239.meteorapp.com --free --mongo
