add npm install to deploy pipeline

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,9 @@ jobs:
           chmod +x ./galaxy-login.sh
           ./galaxy-login.sh
 
+      - name: Install dependencies
+        run: npm install
+
       - name: Deploy
         run: |
           export PATH="/home/runner/.meteor:$PATH"
