galaxy login script now takes username and password as arguments

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           export PATH="/home/runner/.meteor:$PATH"
           chmod +x ./galaxy-login.sh
-          ./galaxy-login.sh
+          ./galaxy-login.sh "$GALAXY_USERNAME" "$GALAXY_PASSWORD"
 
       - name: Deploy
         run: |
