--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@azure/identity": "^4.9.0",
+    "@azure/storage-blob": "^12.27.0",
     "@babel/runtime": "^7.20.7",
     "@radix-ui/react-progress": "^1.1.4",
     "@reduxjs/toolkit": "^2.6.1",
@@ -57,7 +59,7 @@
     "eslint": "^9.23.0",
     "eslint-plugin-react": "^7.37.4",
     "jest": "^29.7.0",
-    "typescript": "^5.8.2",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.28.0"
   }
 }
