--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postcss-load-config": "^6.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.56.2",
     "react-redux": "^9.2.0",
