--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@radix-ui/react-progress": "^1.1.4",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/postcss": "^4.0.17",
+    "date-fns": "^4.1.0",
     "meteor-node-stubs": "^1.2.5",
     "patch-package": "^8.0.0",
     "postcss": "^8.5.3",
     "postcss-load-config": "^6.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.18.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.4.1",
