--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "postcss-load-config": "^6.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-big-calendar": "^1.18.0",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.4.1",
