--- a/package.json
+++ b/package.json
@@ -16,17 +16,23 @@
     "@fullcalendar/interaction": "^6.1.17",
     "@fullcalendar/react": "^6.1.17",
     "@fullcalendar/timegrid": "^6.1.17",
+    "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-radio-group": "^1.3.6",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.2",
-    "@radix-ui/react-toast": "^1.2.13",
     "@radix-ui/react-tabs": "^1.1.9",
+    "@radix-ui/react-toast": "^1.2.13",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/postcss": "^4.0.17",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "fullcalendar": "^6.1.17",
+    "lucide-react": "^0.510.0",
     "meteor-node-stubs": "^1.2.5",
     "patch-package": "^8.0.0",
     "postcss": "^8.5.3",
@@ -34,6 +40,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-calendar": "^5.1.0",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.2",
@@ -41,6 +48,7 @@
     "react-router": "^7.4.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.0.17",
+    "turbo-stream": "^3.1.0",
     "zod": "^3.24.4"
   },
   "jest": {
