--- a/package.json
+++ b/package.json
@@ -15,27 +15,23 @@
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-label": "^2.1.6",
-    "@radix-ui/react-progress": "^1.1.6",
-    "@radix-ui/react-slot": "^1.2.2",
-    "@radix-ui/react-switch": "^1.2.4",
-    "@radix-ui/react-toast": "^1.2.13",
-    "@reduxjs/toolkit": "^2.8.0",
-    "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.13",
-    "@radix-ui/react-progress": "^1.1.4",
+    "@radix-ui/react-progress": "^1.1.6",
     "@radix-ui/react-radio-group": "^1.3.6",
     "@radix-ui/react-select": "^2.2.4",
-    "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-switch": "^1.2.2",
-    "@radix-ui/react-toast": "^1.2.13",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-switch": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.9",
-    "@reduxjs/toolkit": "^2.6.1",
+    "@radix-ui/react-toast": "^1.2.13",
+    "@reduxjs/toolkit": "^2.8.0",
     "@tailwindcss/postcss": "^4.0.17",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "bcrypt": "^5.1.1",
     "lucide-react": "^0.507.0",
     "meteor-node-stubs": "^1.2.5",
+    "node-gyp": "^11.2.0",
+    "node-gyp-build": "^4.8.4",
     "patch-package": "^8.0.0",
     "postcss": "^8.5.3",
     "postcss-load-config": "^6.0.1",
