--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@azure/arm-subscriptions": "^5.1.0",
+    "@azure/core-rest-pipeline": "^1.22.0",
+    "@azure/core-util": "^1.13.0",
     "@azure/identity": "^4.9.1",
+    "@azure/logger": "^1.3.0",
     "@azure/storage-blob": "^12.15.0",
     "@babel/runtime": "^7.27.1",
     "@fullcalendar/core": "^6.1.17",
