--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@azure/arm-subscriptions": "^5.1.0",
     "@azure/identity": "^4.9.1",
     "@azure/storage-blob": "^12.27.0",
-    "@babel/runtime": "^7.27.1",
+    "@babel/runtime": "^7.28.2",
     "@fullcalendar/core": "^6.1.17",
     "@fullcalendar/daygrid": "^6.1.17",
     "@fullcalendar/interaction": "^6.1.17",
@@ -35,6 +35,8 @@
     "@radix-ui/react-toast": "^1.2.13",
     "@reduxjs/toolkit": "^2.8.0",
     "@tailwindcss/postcss": "^4.0.17",
+    "@types/react-router-dom": "^5.3.3",
+    "@typespec/ts-http-runtime": "^0.3.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -54,6 +56,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.3",
+    "react-router-dom": "^6.30.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.0.17",
     "turbo-stream": "^3.1.0",
