--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-toast": "^1.2.13",
     "@reduxjs/toolkit": "^2.8.0",
     "@tailwindcss/postcss": "^4.0.17",
+    "@vis.gl/react-google-maps": "^1.5.5",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
