86czy7g09: Attempt at workflow fix

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: "Deployment"
+name: Deployment
 
 on:
   push:
@@ -13,29 +13,33 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install meteor
-        run: npx meteor
+      # Install Meteor CLI
+      - name: Install Meteor
+        run: curl https://install.meteor.com/ | sh
 
-      - name: Install dependencies
+      # Install dependencies
+      - name: Install NPM dependencies
         run: npm install
 
+      # Install expect via apt-get (more reliable than brew)
       - name: Install expect
         run: |
-          eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
-          brew install expect
+          sudo apt-get update
+          sudo apt-get install -y expect
 
+      # Galaxy login step
       - name: Galaxy login
         working-directory: ./scripts
         env:
           GALAXY_USERNAME: ${{ secrets.GALAXY_USERNAME }}
           GALAXY_PASSWORD: ${{ secrets.GALAXY_PASSWORD }}
-          AZURE_CONNECTION_STRING: ${{ secrets.AZURE_CONNECTION_STRING }}
         run: |
-          export PATH="/home/runner/.meteor:$PATH"
+          export PATH="$HOME/.meteor:$PATH"
           chmod +x ./galaxy-login.sh
           ./galaxy-login.sh "$GALAXY_USERNAME" "$GALAXY_PASSWORD"
 
-      - name: Inject AZURE_CONNECTION_STRING
+      # Create settings.json
+      - name: Inject settings
         run: |
           echo "{
             \"public\": {
@@ -46,8 +50,9 @@ jobs:
             }
           }" > settings.json 
 
+      # Deploy to Galaxy
       - name: Deploy
         run: |
-          export PATH="/home/runner/.meteor:$PATH"
+          export PATH="$HOME/.meteor:$PATH"
           export DEPLOY_HOSTNAME=ap-southeast-2.galaxy.meteor.com
           meteor deploy 20251pm-allinone.au.meteorapp.com --settings settings.json --free --mongo
