--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,10 +48,6 @@ jobs:
 
       - name: Deploy
         run: |
-          sudo apt-get update
-          sudo apt-get install -y expect
-          chmod +x galaxy-login.sh
-          ./galaxy-login.sh "$GALAXY_USERNAME" "$GALAXY_PASSWORD"
-          cd ..
           export PATH="$HOME/.meteor:$PATH"
+          export DEPLOY_HOSTNAME=ap-southeast-2.galaxy.meteor.co
           meteor deploy 20251pm-allinone.au.meteorapp.com --settings settings.json --free --mongo
