--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@azure-rest/core-client": "2.3.5",
     "@azure/arm-subscriptions": "^5.1.0",
-    "@azure/core-rest-pipeline": "^1.22.0",
-    "@azure/core-util": "^1.13.0",
+    "@azure/core-client": "1.9.3",
+    "@azure/core-rest-pipeline": "1.19.1",
+    "@azure/core-util": "1.11.0",
     "@azure/identity": "^4.9.1",
-    "@azure/logger": "^1.3.0",
+    "@azure/logger": "1.1.4",
     "@azure/storage-blob": "^12.15.0",
-    "@babel/runtime": "^7.27.1",
+    "@babel/runtime": "^7.28.3",
     "@fullcalendar/core": "^6.1.17",
     "@fullcalendar/daygrid": "^6.1.17",
     "@fullcalendar/interaction": "^6.1.17",
@@ -73,6 +75,7 @@
       "<rootDir>"
     ],
     "moduleNameMapper": {
+      "^@typespec/ts-http-runtime/internal/(.*)$": "<rootDir>/node_modules/@typespec/ts-http-runtime/dist/commonjs/$1/internal.js",
       "^/(.*)": "<rootDir>/$1",
       "^meteor/(.*)": "<rootDir>/app/client/library-modules/meteor-test-stubs/$1"
     }
@@ -97,9 +100,16 @@
     "babel-jest": "^29.7.0",
     "eslint": "^9.23.0",
     "eslint-plugin-react": "^7.37.4",
-    "jest": "^29.7.0",
+    "jest": "^30.1.1",
     "patch-package": "^8.0.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.28.0"
+  },
+  "overrides": {
+    "@azure-rest/core-client": "2.3.5",
+    "@azure/logger": "1.1.4",
+    "@azure/core-util": "1.11.0",
+    "@azure/core-client": "1.9.3",
+    "@azure/core-rest-pipeline": "1.19.1"
   }
 }
